--- a/movflix/src/main/resources/templates/modify.html
+++ b/movflix/src/main/resources/templates/modify.html
@@ -25,6 +25,9 @@
 		<div class="row rw-form">
 			<p>Still in progress...</p>
 		</div>
+		<div class="row rw-form">
+			<p><a href="/addMovie">Back</a></p>
+		</div>
 
 	</div>
 </body>
